cli/tests/error_003_typescript.ts.out
[WILDCARD]error TS2322: Type '{ a: { b: { c(): { d: number; }; }; }; }' is not assignable to type '{ a: { b: { c(): { d: string; }; }; }; }'.
  The types of 'a.b.c().d' are incompatible between these types.
    Type 'number' is not assignable to type 'string'.

[WILDCARD]/cli/tests/error_003_typescript.ts:20:1

20 x = y;
   ^

